results/SVCOMP/conversational/log-ExSymExeSimple-2024_03_12_22_10_42.txt
class Main {
  static class Node {
    //@ requires a <= Integer.MAX_VALUE && b <= Integer.MAX_VALUE;
    //@ ensures \result ==> a <= b;
    //@ ensures \result ==> (a == b ==> System.out.println("eq")) || (a != b ==> System.out.println("<"));
    //@ ensures !\result ==> a > b;
    public boolean test(int a, int b) {

      if (a > b) {
        return false;
      } else if (a == b) System.out.println("eq");
      else
        System.out.println("<");
      return true;
    }
  }

  //@ requires arg <= Integer.MAX_VALUE;
  //@ ensures \result ==> arg < Integer.MAX_VALUE;
  //@ ensures !\result ==> arg >= Integer.MAX_VALUE;
  public static boolean f(int arg) {
    if (arg >= Integer.MAX_VALUE) return true;
    Main inst = new Main();
    Node n = new Node();
    return n.test(arg, arg + 1);
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeSimple.java:5: error: incompatible types: void cannot be converted to boolean
    //@ ensures \result ==> (a == b ==> System.out.println("eq")) || (a != b ==> System.out.println("<"));
                                                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExeSimple.java:5: error: incompatible types: void cannot be converted to boolean
    //@ ensures \result ==> (a == b ==> System.out.println("eq")) || (a != b ==> System.out.println("<"));
                                                                                                   ^
2 errors

class Main {
  static class Node {
    //@ requires a <= Integer.MAX_VALUE && b <= Integer.MAX_VALUE;
    //@ ensures \result ==> a <= b;
    //@ ensures \result ==> (a == b) || (a != b);
    //@ ensures !\result ==> a > b;
    public boolean test(int a, int b) {

      if (a > b) {
        return false;
      } else if (a == b) System.out.println("eq");
      else
        System.out.println("<");
      return true;
    }
  }

  //@ requires arg <= Integer.MAX_VALUE;
  //@ ensures \result ==> arg < Integer.MAX_VALUE;
  //@ ensures !\result ==> arg >= Integer.MAX_VALUE;
  public static boolean f(int arg) {
    if (arg >= Integer.MAX_VALUE) return true;
    Main inst = new Main();
    Node n = new Node();
    return n.test(arg, arg + 1);
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeSimple.java:22: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/ExSymExeSimple.java:19:) in method f
    if (arg >= Integer.MAX_VALUE) return true;
                                  ^
/home/max/Documents/JMLGPT/tmp/ExSymExeSimple.java:19: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/ExSymExeSimple.java:22:
  //@ ensures \result ==> arg < Integer.MAX_VALUE;
      ^
2 verification failures

class Main {
  static class Node {
    //@ requires a <= Integer.MAX_VALUE && b <= Integer.MAX_VALUE;
    //@ ensures \result ==> a <= b;
    //@ ensures \result ==> (a == b) || (a != b);
    //@ ensures !\result ==> a > b;
    public boolean test(int a, int b) {

      if (a > b) {
        return false;
      } else if (a == b) System.out.println("eq");
      else
        System.out.println("<");
      return true;
    }
  }

  //@ requires arg < Integer.MAX_VALUE;
  //@ ensures \result ==> arg < Integer.MAX_VALUE;
  //@ ensures !\result ==> arg >= Integer.MAX_VALUE;
  public static boolean f(int arg) {
    if (arg >= Integer.MAX_VALUE) return true;
    Main inst = new Main();
    Node n = new Node();
    return n.test(arg, arg + 1);
  }
}

